Update ping pong ball.html

--- a/ping pong ball.html
+++ b/ping pong ball.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+     <title>pingpongball</title>
+    </head>
     <body>
         <body style="background-color:powderblue;">
 
