--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
      <title>pingpongball</title>
     </head>
     <body>
-        <body style="background-color:powderblue;">
-
-            <h1>random acts thats it</h1>
-            </body>
+         <h1>random acts thats it</h1>
         <video width="600" height="500" controls>
-            <source src="/i wanna know.mp4" type="video/mp4">
-            <source src="/i wanna know.mp4" type="video/ogg">
+            <source src="9.mp4" type="video/mp4">
+            <source src="9.mp4" type="video/ogg">
           </video>
           <video width="600" height="600" controls>
             <source src="/6.mp4" type="video/mp4">
@@ -18,7 +15,7 @@
           </video>
           <style>
             body {
-              background-image: url('/2.jpg');
+              background-image: url('2.jpg');
               background-repeat: no-repeat;
               background-attachment: fixed;
               background-size: 100% 100%;
