--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
      <title>pingpongball</title>
     </head>
-    <body>
-         <h1>random acts thats it</h1>
+    <h1>random acts thats it</h1>
+            </body>
         <video width="600" height="500" controls>
             <source src="9.mp4" type="video/mp4">
             <source src="9.mp4" type="video/ogg">
           </video>
           <video width="600" height="600" controls>
-            <source src="/6.mp4" type="video/mp4">
-            <source src="/6.mp4" type="video/ogg">
+            <source src="6.mp4" type="video/mp4">
+            <source src="6.mp4" type="video/ogg">
           </video>
           <style>
             body {
